--- a/app/src/main/res/layout/activity_edit_social_accounts.xml
+++ b/app/src/main/res/layout/activity_edit_social_accounts.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:background="@drawable/account_bg_oval"
     android:layout_height="match_parent"
-    tools:context=".EditSocialAccounts">
+    tools:context=".activities.EditSocialAccounts">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
